--- a/Assignment1.ipynb
+++ b/Assignment1.ipynb
@@ -4,6 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### This is a *brief* summary of what the assignment consisted of:\n",
+    "\n",
+    "#### Question 1: Implement a sampling algorithm to simulate a multinomial distribution of a students daily routine\n",
+    "#### Question 2: Fit a 20-degree polynomial to a given dataset and add L2-Regularization to the model\n",
+    "#### Question 3: Fit a linear regression to another dataset using stochastic gradient descent\n",
+    "#### Question 4: Clean real life dataset, fit using linear regression, calculate MSE. Use Ridge-Regression and try "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Question 1"
    ]
   },
