--- a/Assignment2.ipynb
+++ b/Assignment2.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### This is a *brief* summary of what the assignment consisted of:\n",
+    "\n",
+    "#### Question 1: Generate synthetic data sets, 2 classed with 20 features each, classes share Covariance matrix\n",
+    "#### Question 2: Estimate parameters of the GDA model using maximul likelihood\n",
+    "#### Question 3: Use k-NN to learn a classifier\n",
+    "#### Question 4: Generate synthetic data sets, each class now a mixture of 3 Gaussians\n",
+    "#### Question 5: Same as Q2 and Q3 with new data set"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -80,6 +93,13 @@
     "ds2.cov1 = ds2.get_cov('Datasets/DS2_Cov1.txt')\n",
     "ds2.cov2 = ds2.get_cov('Datasets/DS2_Cov2.txt')\n",
     "ds2.cov3 = ds2.get_cov('Datasets/DS2_Cov3.txt')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q1/Q4:"
    ]
   },
   {
@@ -446,7 +466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
