--- a/Assignment3.ipynb
+++ b/Assignment3.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### This is a *brief* summary of what the assignment consisted of:\n",
+    "#### Question 1: Convert given datasets to Binary/Frequency Bag of Words representation\n",
+    "#### Question 2: Find best hyperparameters and calculate F1-measure for different classifiers on Yelp dataset represented as BBoW\n",
+    "#### Question 3: Find best hyperparameters and calculate F1-measure for different classifiers on Yelp dataset represented as FBoW\n",
+    "#### Question 4: Find best hyperparameters and calculate F1-measure for different classifiers on IMDB dataset represented as BBoW\n",
+    "#### Question 5: Find best hyperparameters and calculate F1-measure for different classifiers on IMDB dataset represented as FBoW"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
