--- a/Kaggle-CNN.ipynb
+++ b/Kaggle-CNN.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "#### First we removed the noise from the images. Then we used a CNN model built on Keras to classify the images. We used data augmentation to have more data points and achieve the best possible results when thoroughly tuning the hyperparameters of the model. We used a GPU for faster computation. \n",
     "\n",
-    "#### We finished 5th / 56"
+    "#### We finished 5th / 56 and achieved an accuracy of 85%"
    ]
   },
   {
